@@ -39,6 +39,7 @@ import com.google.common.collect.Lists;
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
 import com.stripe.model.Address;
+import com.stripe.model.Card;
 import com.stripe.model.Customer;
 import com.stripe.model.Invoice;
 import com.stripe.model.InvoiceLineItem;
@@ -49,6 +50,7 @@ import com.stripe.model.Price;
 import com.stripe.model.PriceCollection;
 import com.stripe.model.Subscription;
 import com.stripe.model.SubscriptionItem;
+import com.stripe.model.SubscriptionItemCollection;
 import com.stripe.param.CustomerCreateParams;
 import com.stripe.param.CustomerRetrieveParams;
 import com.stripe.param.CustomerUpdateParams;
@@ -60,6 +62,7 @@ import com.stripe.param.SubscriptionUpdateParams;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -71,7 +74,6 @@ public class StripeHelperImpl implements StripeHelper {
   private final TelemetryReporter telemetryReporter;
   private List<String> subscriptionExpandList = Arrays.asList("latest_invoice.payment_intent");
   private static final String ACCOUNT_IDENTIFIER_KEY = "accountIdentifier";
-  private static final String MODULE_TYPE_KEY = "moduleType";
   private static final String CUSTOMER_EMAIL_KEY = "customer_email";
   private static final String SEARCH_MODULE_TYPE_EDITION_BILLED_MAX =
       "metadata['module']:'%s' AND metadata['type']:'%s' AND metadata['edition']:'%s' AND metadata['billed']:'%s' AND metadata['max']:'%s'";
@@ -86,22 +88,26 @@ public class StripeHelperImpl implements StripeHelper {
 
   @Override
   public CustomerDetailDTO createCustomer(CustomerParams customerParams) {
-    CustomerCreateParams.Address address = CustomerCreateParams.Address.builder()
-                                               .setCity(customerParams.getAddress().getCity())
-                                               .setCountry(customerParams.getAddress().getCountry())
-                                               .setLine1(customerParams.getAddress().getLine1())
-                                               .setLine2(customerParams.getAddress().getLine2())
-                                               .setPostalCode(customerParams.getAddress().getPostalCode())
-                                               .setState(customerParams.getAddress().getState())
-                                               .build();
-
-    CustomerCreateParams params =
+    CustomerCreateParams.Builder paramsBuilder =
         CustomerCreateParams.builder()
-            .setAddress(address)
             .setEmail(customerParams.getBillingContactEmail())
             .setName(customerParams.getName())
-            .setMetadata(ImmutableMap.of(ACCOUNT_IDENTIFIER_KEY, customerParams.getAccountIdentifier()))
-            .build();
+            .setMetadata(Map.of(ACCOUNT_IDENTIFIER_KEY, customerParams.getAccountIdentifier()));
+
+    if (customerParams.getAddress() != null) {
+      CustomerCreateParams.Address address = CustomerCreateParams.Address.builder()
+                                                 .setCity(customerParams.getAddress().getCity())
+                                                 .setCountry(customerParams.getAddress().getCountry())
+                                                 .setLine1(customerParams.getAddress().getLine1())
+                                                 .setLine2(customerParams.getAddress().getLine2())
+                                                 .setPostalCode(customerParams.getAddress().getPostalCode())
+                                                 .setState(customerParams.getAddress().getState())
+                                                 .build();
+
+      paramsBuilder.setAddress(address);
+    }
+
+    CustomerCreateParams params = paramsBuilder.build();
 
     Customer customer = stripeHandler.createCustomer(params);
     return toCustomerDetailDTO(customer);
@@ -215,7 +221,7 @@ public class StripeHelperImpl implements StripeHelper {
       SubscriptionItemRequest subscriptionItemRequest) {
     return String.format(searchStringBase, subscriptionRequest.getModuleType().toString(),
         subscriptionItemRequest.getType(), subscriptionRequest.getEdition(), subscriptionRequest.getPaymentFrequency(),
-        subscriptionItemRequest.getQuantity());
+        subscriptionItemRequest.getQuantity().toString());
   }
 
   @Override
@@ -263,7 +269,6 @@ public class StripeHelperImpl implements StripeHelper {
     // Add metadata
     Map<String, String> metadata = new HashMap<>();
     metadata.put(ACCOUNT_IDENTIFIER_KEY, stripeSubscriptionRequest.getAccountIdentifier());
-    metadata.put(MODULE_TYPE_KEY, stripeSubscriptionRequest.getModuleType());
     metadata.put(CUSTOMER_EMAIL_KEY, stripeSubscriptionRequest.getCustomerEmail());
     creationParamsBuilder.setMetadata(metadata);
 
@@ -278,6 +283,19 @@ public class StripeHelperImpl implements StripeHelper {
   }
 
   @Override
+  public SubscriptionDetailDTO addToSubscription(
+      StripeSubscriptionRequest subscriptionRequest, SubscriptionDetailDTO subscription) {
+    subscription.getItems().stream().forEach(subscriptionItem -> {
+      subscriptionRequest.getItems().add(StripeItemRequest.Builder.newInstance()
+                                             .withQuantity(subscriptionItem.getQuantity())
+                                             .withPriceId(subscriptionItem.getPrice().getPriceId())
+                                             .build());
+    });
+
+    return updateSubscription(subscriptionRequest);
+  }
+
+  @Override
   public SubscriptionDetailDTO updateSubscription(StripeSubscriptionRequest stripeSubscriptionRequest) {
     Subscription subscription = stripeHandler.retrieveSubscription(stripeSubscriptionRequest.getSubscriptionId());
 
@@ -288,7 +306,7 @@ public class StripeHelperImpl implements StripeHelper {
     // Go through current subscription and update.
     SubscriptionUpdateParams.Builder updateParamBuilder = SubscriptionUpdateParams.builder();
     updateParamBuilder.setProrationBehavior(SubscriptionUpdateParams.ProrationBehavior.ALWAYS_INVOICE)
-        .setPaymentBehavior(SubscriptionUpdateParams.PaymentBehavior.PENDING_IF_INCOMPLETE)
+        .setPaymentBehavior(SubscriptionUpdateParams.PaymentBehavior.ALLOW_INCOMPLETE)
         .addAllExpand(subscriptionExpandList);
     if (!newItems.isEmpty()) {
       List<SubscriptionItem> data = subscription.getItems().getData();
@@ -315,8 +333,15 @@ public class StripeHelperImpl implements StripeHelper {
       }
     }
 
-    return toSubscriptionDetailDTO(stripeHandler.updateSubscription(stripeSubscriptionRequest.getSubscriptionId(),
-        updateParamBuilder.build(), stripeSubscriptionRequest.getModuleType()));
+    Subscription updatedSubscription = stripeHandler.updateSubscription(stripeSubscriptionRequest.getSubscriptionId(),
+        updateParamBuilder.build(), stripeSubscriptionRequest.getModuleType());
+
+    SubscriptionDetailDTO subscriptionDetailDTO = toSubscriptionDetailDTO(updatedSubscription);
+
+    stripeHandler.putInvoiceMetadata(updatedSubscription.getLatestInvoice(), ACCOUNT_IDENTIFIER_KEY,
+        stripeSubscriptionRequest.getAccountIdentifier());
+
+    return subscriptionDetailDTO;
   }
 
   @Override
@@ -388,19 +413,39 @@ public class StripeHelperImpl implements StripeHelper {
   }
 
   @Override
-  public void payInvoice(String invoiceId) {
-    stripeHandler.payInvoice(invoiceId);
+  public void payInvoice(String invoiceId, String accountIdentifier) {
+    stripeHandler.payInvoice(invoiceId, accountIdentifier);
+  }
+
+  @Override
+  public Card deleteCard(String customerIdentifier, String creditCardIdentifier) {
+    return stripeHandler.deleteCard(customerIdentifier, creditCardIdentifier);
   }
 
   @Override
   public PaymentMethodCollectionDTO listPaymentMethods(String customerId) {
     PaymentMethodCollection paymentMethodCollection = stripeHandler.retrievePaymentMethodsUnderCustomer(customerId);
-    return toPaymentMethodCollectionDTO(paymentMethodCollection);
+    PaymentMethodCollectionDTO paymentMethodCollectionDTO = toPaymentMethodCollectionDTO(paymentMethodCollection);
+    String defaultPaymentMethodId = getCustomer(customerId).getDefaultSource();
+    Optional<CardDTO> cardDTO = paymentMethodCollectionDTO.getPaymentMethods()
+                                    .stream()
+                                    .filter((CardDTO card) -> card.getId().equals(defaultPaymentMethodId))
+                                    .findFirst();
+    if (cardDTO.isPresent()) {
+      cardDTO.get().setIsDefaultCard(true);
+    }
+
+    return paymentMethodCollectionDTO;
   }
 
   @Override
   public InvoiceDetailDTO finalizeInvoice(String invoiceId) {
     return toInvoiceDetailDTO(stripeHandler.finalizeInvoice(invoiceId));
+  }
+
+  @Override
+  public String retrieveClientSecret(String customerId) {
+    return stripeHandler.retrieveSetupIntent(customerId).getClientSecret();
   }
 
   private InvoiceDetailDTO toInvoiceDetailDTO(Invoice invoice) {
@@ -477,11 +522,9 @@ public class StripeHelperImpl implements StripeHelper {
     builder.customerId(customer.getId())
         .address(address)
         .billingEmail(customer.getEmail())
-        .companyName(customer.getName());
-    // display default payment method
-    if (customer.getInvoiceSettings() != null) {
-      builder.defaultSource(customer.getInvoiceSettings().getDefaultPaymentMethod());
-    }
+        .companyName(customer.getName())
+        .defaultSource(customer.getDefaultSource());
+
     return builder.build();
   }
 
@@ -553,11 +596,22 @@ public class StripeHelperImpl implements StripeHelper {
     return priceDTO;
   }
 
+  private List<ItemDTO> toItemDTOList(SubscriptionItemCollection subscriptionItemCollection) {
+    List<ItemDTO> itemDTOList = new LinkedList<>();
+    subscriptionItemCollection.getData().forEach(subscriptionItem -> {
+      itemDTOList.add(ItemDTO.builder()
+                          .quantity(subscriptionItem.getQuantity())
+                          .price(toPriceDTO(subscriptionItem.getPrice()))
+                          .build());
+    });
+    return itemDTOList;
+  }
+
   private SubscriptionDetailDTO toSubscriptionDetailDTO(Subscription subscription) {
     SubscriptionDetailDTO dto = SubscriptionDetailDTO.builder()
+                                    .items(toItemDTOList(subscription.getItems()))
                                     .subscriptionId(subscription.getId())
                                     .accountIdentifier(subscription.getMetadata().get(ACCOUNT_IDENTIFIER_KEY))
-                                    .moduletype(ModuleType.valueOf(subscription.getMetadata().get(MODULE_TYPE_KEY)))
                                     .customerId(subscription.getCustomer())
                                     .status(subscription.getStatus())
                                     .latestInvoice(subscription.getLatestInvoice())
